integration_tests/codegen_fail/fail/interface/wrong_item.stderr
error: #[graphql_interface] attribute is applicable to trait definitions and trait implementations only
 --> $DIR/wrong_item.rs:8:1
  |
8 | #[graphql_interface(for = ObjA)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
